-some changes